--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/nhays89/BELPhaser/issues"
   },
-  "homepage": "https://github.com/nhays89/BELPhaser#readme"
+  "homepage": "https://github.com/nhays89/BELPhaser#readme",
+  "dependencies": {
+    "phaser": "^2.6.2"
+  }
 }
