--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
   },
   "homepage": "https://github.com/nhays89/BELPhaser#readme",
   "dependencies": {
-    "phaser": "^2.6.2"
+    "easystarjs": "~0.3.1",
+    "pathfinding": "^0.4.18",
+    "phaser": "^2.6.2",
+    "phaser_plugin_pathfinding": "^0.2.0",
+    "requirejs": "~2.3.3"
   }
-  
 }
