--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "dependencies": {
     "pathfinding": "^0.4.18",
     "phaser": "^2.6.2",
-    "requirejs": "~2.3.3"
+    "requirejs": "~2.3.3",
+    "stopwatchjs": "^0.1.1",
+    "timer.js": "^1.0.4"
   }
 }
